Section 17 Creating and Using Helm Charts/d_hel-template-output_example_output/spring-boot-rest-api/templates/deployment.yaml
---
# Source: spring-boot-rest-api/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helm-yellow-01-spring-boot-rest-api
  labels:
    app.kubernetes.io/name: spring-boot-rest-api
    app.kubernetes.io/instance: helm-yellow-01
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: spring-boot-rest-api
      app.kubernetes.io/instance: helm-yellow-01
  template:
    metadata:
      labels:
        app.kubernetes.io/name: spring-boot-rest-api
        app.kubernetes.io/instance: helm-yellow-01
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8112"
        prometheus.io/path: /devops/yellow/actuator/prometheus
    spec:
      serviceAccountName: default
      containers:
        - name: spring-boot-rest-api
          image: "timpamungkas/devops-yellow:2.0.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8112
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /devops/yellow/actuator/health/liveness
              port: 8112
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 4
          readinessProbe:
            httpGet:
              path: /devops/yellow/actuator/health/readiness
              port: 8112
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 4
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 384Mi
          volumeMounts:
            - name: tmp
              mountPath: /tmp/
            - name: upload-image-empty-dir
              mountPath: /upload/image
            - name: upload-doc-empty-dir
              mountPath: /upload/doc
            
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 100000
            runAsNonRoot: true
            runAsUser: 100000
      volumes:
        - name: tmp
          emptyDir: {}
        - name: upload-image-empty-dir
          emptyDir: {}
        - name: upload-doc-empty-dir
          emptyDir: {}
